--- a/client/src/app/features/shop/product-item/product-item.component.html
+++ b/client/src/app/features/shop/product-item/product-item.component.html
@@ -1,5 +1,5 @@
 @if(product) {
-  <mat-card appearance="raised" routerLink="/shop/{{product.id}}" class="product-card">
+  <mat-card appearance="raised" routerLink="/shop/{{product.id}}" class="product-card relative z-0">
     <img src="{{ product.pictureUrl }}" alt="image of {{ product.name }}"/>
     <mat-card-content class="mt-2">
       <h2 class="text-sm font-semibold uppercase">
@@ -9,8 +9,8 @@
         </p>
       </h2>
     </mat-card-content>
-    <mat-card-actions>
-      <button mat-stroked-button color="w-full">
+    <mat-card-actions class="w-full">
+      <button mat-stroked-button class="w-full z-[1]" (click)="cartService.addItemToCart(product, 1, $event)">
         <mat-icon>add_shopping_carts</mat-icon>
         Add to cart
       </button>
