--- a/client/src/app/features/shop/shop.component.html
+++ b/client/src/app/features/shop/shop.component.html
@@ -4,7 +4,7 @@
       <mat-paginator
         class="bg-white"
         (page)="handlePageEvent($event)"
-        [length]="products?.count"
+        [length]="products.count"
         [pageSize]="shopParams.pageSize"
         [showFirstLastButtons]="true"
         [pageSizeOptions]="pageSizeOptions"
@@ -48,7 +48,7 @@
       </div>
     </div>
     <div class="grid grid-cols-5 gap-4">
-      @for (product of products?.data; track product.id) {
+      @for (product of products.data; track product.id) {
         <app-product-item [product]="product"></app-product-item>
       }
     </div>
