--- a/client/src/app/layout/layout/header/header.component.html
+++ b/client/src/app/layout/layout/header/header.component.html
@@ -1,13 +1,19 @@
-<header class="border-b shadow-md p-3 w-full">
+<header class="border-b shadow-md p-3 w-full max-h-20 fixed top-0 z-50 bg-white">
   <div class="flex align-middle items-center justify-between max-w-screen-2xl mx-auto">
-    <img src="/images/logo.png" alt="app logo" class="max-h-16" />
+    <img alt="app logo" class="max-h-16" src="/images/logo.png" />
     <nav class="flex gap-3 my-2 uppercase text-2xl">
-        <a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Home</a>
+        <a [routerLinkActiveOptions]="{ exact: true }" routerLink="/" routerLinkActive="active">Home</a>
         <a routerLink="/shop" routerLinkActive="active">Shop</a>
-        <a>Contact</a>
+        <a routerLink="/test-error" routerLinkActive="active">Errors</a>
     </nav>
     <div class="flex gap-3 align-middle">
-      <a matBadge="1" matBadgeSize="large" class="custom-badge mr-2">
+      <a
+        class="custom-badge mr-2"
+        matBadge="{{cartService.itemCount()}}"
+        matBadgeSize="large"
+        routerLink="/cart"
+        routerLinkActive="active"
+      >
         <mat-icon>shopping_cart</mat-icon>
       </a>
       <button mat-stroked-button>Login</button>
@@ -17,3 +23,7 @@
 
   <ng-container #container></ng-container>
 </header>
+
+@if (busyService.loading) {
+  <mat-progress-bar mode="indeterminate" class="fixed top-20 z-50"></mat-progress-bar>
+}
