--- a/client/src/app/features/cart/cart.component.html
+++ b/client/src/app/features/cart/cart.component.html
@@ -1,8 +1,8 @@
 <section>
-  <div class="mx-auto max-w-screen-xl">
+  @if (cartService.cart()?.items?.length! > 0) {
     <div class="flex w-full items-start gap-6 mt-32">
       <div class="w-3/4">
-        @for(item of cartService.cart()?.items; track item.productId) {
+        @for (item of cartService.cart()?.items; track item.productId) {
           <app-cart-item [item]="item"></app-cart-item>
         }
       </div>
@@ -10,5 +10,8 @@
         <app-order-summary></app-order-summary>
       </div>
     </div>
-  </div>
+  } @else {
+    <app-empty-state></app-empty-state>
+  }
+
 </section>
