--- a/client/src/app/features/checkout/checkout.component.html
+++ b/client/src/app/features/checkout/checkout.component.html
@@ -1,3 +1,30 @@
-<div class="mt-5">
-  <h1 class="text-2xl">Only authorized users can see this</h1>
+<div class="flex mt-32 gap-6">
+  <div class="w-3/4">
+    <mat-stepper #stepper (selectionChange)="onStepChange($event)" class="bg-white border border-gray-200 shadow-sm">
+      <mat-step label="Address">
+        <div id="address-element"></div>
+        <div class="flex justify-end mt-1">
+          <mat-checkbox (change)="onSaveAddressCheckboxChange($event)" [checked]="saveAddress">
+            Save address
+          </mat-checkbox>
+        </div>
+        <div class="flex justify-between mt-6">
+          <button mat-stroked-button routerLink="/shop">Continue shopping</button>
+          <button mat-flat-button matStepperNext>Next</button>
+        </div>
+      </mat-step>
+      <mat-step label="Shipping">
+        Delivery form
+      </mat-step>
+      <mat-step label="Payment">
+        Payment form
+      </mat-step>
+      <mat-step label="Confirmation">
+        Review form
+      </mat-step>
+    </mat-stepper>
+  </div>
+  <div class="w-1/4">
+    <app-order-summary></app-order-summary>
+  </div>
 </div>
