--- a/client/src/app/layout/layout/header/header.component.html
+++ b/client/src/app/layout/layout/header/header.component.html
@@ -16,8 +16,15 @@
       >
         <mat-icon>shopping_cart</mat-icon>
       </a>
-      <button mat-stroked-button>Login</button>
-      <button mat-stroked-button>Register</button>
+      @if (accountService.currentUser()) {
+        <button mat-button [matMenuTriggerFor]="menu">
+          <mat-icon>arrow_drop_down</mat-icon>
+          <span>{{accountService.currentUser()?.email}}</span>
+        </button>
+      } @else {
+        <button routerLink="/account/login" mat-stroked-button>Login</button>
+        <button routerLink="/account/register" mat-stroked-button>Register</button>
+      }
     </div>
   </div>
 
@@ -27,3 +34,19 @@
 @if (busyService.loading) {
   <mat-progress-bar mode="indeterminate" class="fixed top-20 z-50"></mat-progress-bar>
 }
+
+<mat-menu #menu="matMenu" class="px-5">
+  <button class="px-3" mat-menu-item routerLink="/cart">
+    <mat-icon>shopping_cart</mat-icon>
+    My Cart
+  </button>
+  <button class="px-3" mat-menu-item routerLink="/orders">
+    <mat-icon>shopping_cart</mat-icon>
+    My Orders
+  </button>
+  <mat-divider></mat-divider>
+  <button (click)="logout()" class="px-3" mat-menu-item>
+    <mat-icon>logout</mat-icon>
+    Logout
+  </button>
+</mat-menu>
